--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
+@import url('https://fonts.cdnfonts.com/css/ford-antenna');
+
 body, h1, p, ul, li {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family: "Ford Antenna", Arial, Helvetica, sans-serif !important;
+}
+
+.borda-cima {
+    background-color: #d66464cc;
 }
 
 .navbar {
@@ -10,9 +16,12 @@ body, h1, p, ul, li {
     justify-content: flex-start; 
     background-color: #ffffffcc;
     padding: 20px;
+    font-family: 'Ford Antenna Medium Cnd', sans-serif;
+    
 }
 
 .logo {
+    margin-left: 100px; 
     height: 100px;
 }
 
@@ -28,12 +37,108 @@ body, h1, p, ul, li {
 
 .menu a {
     text-decoration: none;
-    color: #005b1e;
-    font-weight: bold;
-    padding: 3px;
+    color: #1b4e22;
+    font-weight: 600;
+    padding: 8px;
+    font-size: 12px;
+    font-family: "Ford Antenna", Arial, Helvetica, sans-serif !important;
 }
 
 .menu a:hover {
     background-color: #ffffff;
     border-radius: 5px;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+}
+
+.cavalodiv1 {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.cavalo1 {
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    height: 600px;
+    width: 1440px;
+}
+
+.ver-mais{
+    position: absolute;
+    top: 51.5%;  
+    left: 10%; 
+    transform: translate(-50%, -50%); 
+    background-color: rgba(255, 255, 255);
+    color: #005b1e;
+    border: none;
+    padding: 15px 35px;
+    cursor: pointer;
+    border-radius: 20px; /* botao redono */
+    font-size: 16px;
+    font-family: "Ford Antenna Medium", Arial, Helvetica, sans-serif !important;
+  }
+
+  .titulo {
+    position: absolute;
+    top: 40%;
+    left: 15%; 
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 40px;
+    font-weight: bold;
+    text-shadow: 2px 2px 5px black; 
+  }
+
+  .borda {
+    border: 1px solid rgb(217, 217, 217);
+    margin-left: 40px;
+    margin-right: 40px;
+  }
+
+  .cavalodiv2 {
+    margin-top: 5%;
+    position: relative;
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.titulo2 {
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    color: #005b1e;
+    font-size: 42px;
+    font-family: 'Ford Antenna Medium', sans-serif;
+    font-weight: 400;
+  }
+
+.botao-vertodos {
+    margin-top: 4%;
+    background-color: #005b1e;
+    color: #ffffff;
+    border: none;
+    padding: 15px 35px;
+    cursor: pointer;
+    border-radius: 30px; /* botao redono */
+    font-size: 16px;
+    font-family: "Ford Antenna Medium", Arial, Helvetica, sans-serif !important;
+    box-shadow: 2px 2px 5px black;
+}
+
+.cavalo2 {
+    zoom: 150%;
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    margin-top: 3%;
 }
