--- a/style.css
+++ b/style.css
@@ -66,13 +66,14 @@ body, h1, p, ul, li {
     display: flex;
     justify-content: center; 
     align-items: center; 
-    height: 600px;
-    width: 1440px;
+    width: 100%; 
+    height: auto; 
+    aspect-ratio: 1440 / 600; 
 }
 
 .ver-mais{
     position: absolute;
-    top: 51.5%;  
+    top: 51%;  
     left: 10%; 
     transform: translate(-50%, -50%); 
     background-color: rgba(255, 255, 255);
@@ -88,7 +89,7 @@ body, h1, p, ul, li {
   .titulo {
     position: absolute;
     top: 40%;
-    left: 15%; 
+    left: 14%; 
     transform: translate(-50%, -50%);
     color: white;
     font-size: 40px;
@@ -136,9 +137,231 @@ body, h1, p, ul, li {
 }
 
 .cavalo2 {
-    zoom: 150%;
+    zoom: 200%;
     display: flex;
     justify-content: center; 
     align-items: center; 
     margin-top: 3%;
+    aspect-ratio: 626 / 223;
+}
+
+.cavalodiv3 {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.cavalo3 {
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    width: 100%; 
+    height: auto; 
+    aspect-ratio: 1440 / 400; 
+}
+
+.ver-ofertas{
+    position: absolute;
+    top: 55%;  
+    left: 8%; 
+    background-color: #ffffff;
+    color: #005b1e;
+    border: none;
+    padding: 15px 35px;
+    cursor: pointer;
+    border-radius: 20px; /* botao redono */
+    font-size: 16px;
+    font-family: "Ford Antenna Medium", Arial, Helvetica, sans-serif !important;
+  }
+
+.texto-cavalo3 {
+    position: absolute;
+    top: 40%;  
+    left: 5%; 
+    color: #ffffff;
+    border: none;
+    padding: 15px 35px;
+    font-size: 18px;
+    font-family: "Ford Antenna Medium", Arial, Helvetica, sans-serif !important;
+    text-shadow: 2px 2px 5px black; 
+}
+
+.ofertas {
+    position: absolute;
+    top: 30%;
+    left: 7%; 
+    color: white;
+    font-size: 40px;
+    font-weight: bold;
+    text-shadow: 2px 2px 5px black; 
+  }
+
+.cavalodiv4 {
+    margin-top: 1.5%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.cavalo4 {
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    width: 100%; 
+    height: auto; 
+    aspect-ratio: 1440 / 400; 
+}
+
+.servicos{
+    position: absolute;
+    top: 55%;  
+    left: 8%; 
+    background-color: #ffffff;
+    color: #005b1e;
+    border: none;
+    padding: 15px 35px;
+    cursor: pointer;
+    border-radius: 20px; /* botao redono */
+    font-size: 16px;
+    font-family: "Ford Antenna Medium", Arial, Helvetica, sans-serif !important;
+  }
+
+.texto-cavalo4 {
+    position: absolute;
+    top: 40%;  
+    left: 5%; 
+    color: #ffffff;
+    border: none;
+    padding: 15px 35px;
+    font-size: 18px;
+    font-family: "Ford Antenna Medium", Arial, Helvetica, sans-serif !important;
+    text-shadow: 2px 2px 5px black; 
+}
+
+.pos-venda{
+    position: absolute;
+    top: 30%;
+    left: 7.5%; 
+    color: white;
+    font-size: 40px;
+    font-weight: bold;
+    text-shadow: 2px 2px 5px black; 
+  }
+
+.saiba-mais{
+    position: absolute;
+    top: 55%;  
+    left: 8%; 
+    background-color: #ffffff;
+    color: #005b1e;
+    border: none;
+    padding: 15px 35px;
+    cursor: pointer;
+    border-radius: 20px; /* botao redono */
+    font-size: 16px;
+    font-family: "Ford Antenna Medium", Arial, Helvetica, sans-serif !important;
+  }
+
+.texto-cavalo5 {
+    position: absolute;
+    top: 40%;  
+    left: 5%; 
+    color: #ffffff;
+    border: none;
+    padding: 15px 35px;
+    font-size: 18px;
+    font-family: "Ford Antenna Medium", Arial, Helvetica, sans-serif !important;
+    text-shadow: 2px 2px 5px black; 
+}
+
+.cavalos-elite{
+    position: absolute;
+    top: 30%;
+    left: 7.5%; 
+    color: white;
+    font-size: 40px;
+    font-weight: bold;
+    text-shadow: 2px 2px 5px black; 
+  }
+
+.cavalodiv6 {
+    margin-top: 1.5%;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    aspect-ratio: 1440 / 400; 
+    width: 1440;
+    height: 400;
+
+}
+
+.cavalo6 {
+    display: flex;
+    align-items: center; 
+    width: 100%; 
+    height: auto; 
+    aspect-ratio: 710 / 400; 
+    margin-left: 0;
+}
+.cavalo7 {
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    width: 100%; 
+    height: auto; 
+    aspect-ratio: 710 / 400; 
+    margin-right: 0;
+}
+
+.servicos{
+    position: absolute;
+    top: 55%;  
+    left: 8%; 
+    background-color: #ffffff;
+    color: #005b1e;
+    border: none;
+    padding: 15px 35px;
+    cursor: pointer;
+    border-radius: 20px; /* botao redono */
+    font-size: 16px;
+    font-family: "Ford Antenna Medium", Arial, Helvetica, sans-serif !important;
+  }
+
+.texto-cavalo4 {
+    position: absolute;
+    top: 40%;  
+    left: 5%; 
+    color: #ffffff;
+    border: none;
+    padding: 15px 35px;
+    font-size: 18px;
+    font-family: "Ford Antenna Medium", Arial, Helvetica, sans-serif !important;
+    text-shadow: 2px 2px 5px black; 
+}
+
+.pos-venda{
+    position: absolute;
+    top: 30%;
+    left: 7.5%; 
+    color: white;
+    font-size: 40px;
+    font-weight: bold;
+    text-shadow: 2px 2px 5px black; 
+  }
+  
+  .imagem1 {
+    position: relative; 
+    width: 49.6%;
+    height: 100%; 
+}
+
+.imagem2 {
+    position: relative; 
+    width: 49.6%; 
+    height: 100%; 
 }
